force-app/main/default/objects/Governance_Config__mdt/fields/Days_Before_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Expiry__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days Before Expiry</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>