force-app/main/default/objects/Governance_Config__mdt/fields/OWA_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>OWA_Email_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>OWA Email Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>