force-app/main/default/objects/Governance_Config__mdt/fields/Target_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Target_Profiles__c</fullName>
    <label>Target Profiles</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>